<resources>
    <string name="app_name">速搜</string>
    <string name="search_hint">输入网址或搜索</string>
    <string name="search_page">页内搜索</string>
    <string name="search_page_hint">在页面上查找</string>
    <string name="search_page_pos">搜索</string>
    <string name="setting_title">我的设置</string>
    <string name="setting_feedback">反馈建议</string>
    <string name="setting_feedback_body">您的反馈和建议</string>
    <string name="setting_feedback_address">mailto:javalive09@163.com</string>
    <string name="setting_about">使用引擎分类搜索的方式,提供简单畅快的搜索体验。简单快速，干净省电。</string>
    <string name="home_title">使用引擎分类搜索的方式\n提供最快的网络搜索体验</string>
    <string name="setting_clear">缓存和cookies已经清理</string>
    <string name="clear_all">清理所有</string>
    <string name="close_tab">关闭标签</string>
    <string name="close_all_tab">清理全部标签</string>
    <string name="wr_sdcard_permission">下载文件到存储卡需要此权限</string>
    <string name="wr_location_permission">网页定位功能需要此权限</string>
    <string name="dialog_download">您是否需要下载此文件？</string>
    <string name="action_download">下载</string>
    <string name="problem_download">Invalid URL encountered, cannot download</string>
    <string name="download_sdcard_busy_dlg_msg">USB 存储设备目前正忙，为确保正常下载此文件请在通知栏中确认关闭 USB 大容量存储。</string>
    <string name="download_sdcard_busy_dlg_title">USB 存储不可用</string>
    <string name="download_no_sdcard_dlg_msg">为正常下载此文件需要 USB 存储设备。</string>
    <string name="download_no_sdcard_dlg_title">未发现 SDCard</string>
    <string name="action_ok">确认</string>
    <string name="cannot_download">仅可下载以 \"http\" 或 \"https\" 开头的链接地址</string>
    <string name="problem_location_download">Cannot download to the specified location</string>
    <string name="download_pending">开始下载…</string>
    <string name="one_step_title">设置为辅助程序</string>
    <string name="one_step_txt">设置 > 应用程序 > 默认设置 > 辅助 > 应用程序 > 点选速搜 > 便可以长按Home一键开启</string>

    <string name="action_copy_pic_link">复制图片链接</string>
    <string name="action_save_pic">保存图片</string>
    <string name="action_share_pic">分享图片</string>
    <string name="find_page_current_content">查找 \'%s\' </string>
    <string name="find_page_current_up">上一个</string>
    <string name="find_page_current_down">下一个</string>


    <string name="action_new_tab">在新标签打开</string>
    <string name="add_new_tab">新标签</string>
    <string name="action_copy_txt_link">复制文字链接</string>
    <string name="action_copy_txt_link_free">自由复制</string>
    <string name="location">允许站点访问地理位置</string>
    <string name="message_location">\n你想使用你的位置吗？</string>
    <string name="action_allow">允许</string>
    <string name="action_do_not_allow">不允许</string>

    <string name="action_cancel">取消</string>
    <string name="action_share">分享页面</string>
    <string name="action_refresh">刷新页面</string>
    <string name="action_exit">退出</string>
    <string name="favorite_txt">已经添加到收藏夹</string>
    <string name="copy_link_txt">已经复制链接</string>
    <string name="action_collect">收藏页面</string>
    <string name="title_bookmark">书签</string>
    <string name="title_tabs">多标签</string>
    <string name="action_copy_link">复制链接</string>
    <string name="action_auto_fullscreen">自动全屏</string>
    <string name="action_desktop">桌面模式</string>
    <string name="action_about">关于速搜</string>
    <string name="action_loading">加载中…</string>
    <string name="action_delete">删除</string>
    <string name="action_bookmark_search">搜索</string>
    <string name="action_tab_search">搜索标签</string>
    <string name="action_bookmark_search_favorite_hint">搜索收藏记录</string>
    <string name="action_bookmark_search_history_hint">搜索历史记录</string>
    <string name="action_bookmark_search_tab_hint">搜索标签记录</string>
    <string name="tabs_title">标签</string>
    <string name="tabs_max_txt">最多可创建99个标签</string>
    <string name="page_search_title">%1$d/%2$d</string>

    <string name="update_dialog_cancel">取消</string>
    <string name="update_toast_start">开始检测版本</string>
    <string name="update_toast_des">下载完后请点击打开</string>
    <string name="update_toast_nonew">已经是最新版本</string>
    <string name="update_dialog_title_one">发现新版本</string>
    <string name="update_dialog_ok">更新</string>
    <string name="app_url">http://7xoxmg.com1.z0.glb.clouddn.com/searcher_71.apk</string>
    <string name="share_title">分享应用给小伙伴</string>
    <string name="share_link_title">分享链接</string>
    <string name="default_engine_url">https://m.baidu.com/s?word=%s</string>
    <string name="engine_icon">引擎图标</string>

    <string name="title_sign_in">登录</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="no_record">无记录</string>

    <string name="message_insecure_connection">Connection to this site is not secure:\n%1$s\nProceed anyway?</string>
    <string name="message_certificate_date_invalid">date of certificate is invalid</string>
    <string name="message_certificate_expired">certificate is expired</string>
    <string name="message_certificate_domain_mismatch">domain in certificate does not match the site domain</string>
    <string name="message_certificate_invalid">certificate is invalid</string>
    <string name="message_certificate_not_yet_valid">certificate is not yet valid</string>
    <string name="message_certificate_untrusted">certificate is not trusted</string>

    <string name="title_warning">警告</string>

    <string name="action_yes">确认</string>
    <string name="action_no">取消</string>
    <!--<string name="fast_enter_navigation_url">http://tpms.mb.qq.com/?aid=site_navigation&amp;cid=site_navigation_cache_direct</string>-->
    <string name="fast_enter_setting">设置</string>
    <string name="fast_enter_download">下载记录</string>
    <string name="action_goforward">前进</string>
    <string name="home">主页</string>
    <string name="paste_txt">从剪切板粘贴</string>
    <string name="enter_txt">进入</string>
    <string name="paste_enter_txt">粘贴并转到</string>
    <string name="exit_hint">再次点击退出程序</string>

    <string-array name="bookmarks">
        <item>收藏夹</item>
        <item>搜索记录</item>
        <item>下载记录</item>
    </string-array>

    <string name="no_track">无痕模式</string>
    <string name="app_share">分享APP</string>
    <string name="clear_cache">清理缓存</string>
    <string name="feed_back">反馈意见</string>
    <string name="manual_update">版本更新</string>
    <string name="app_about">关于速搜</string>
    <string name="one_key">一键开启</string>
    <string name="tab_icon">标签页图标</string>

    <string-array name="favorite_urls_names">
        <item>历史上的今天</item>
        <item>Github趋势</item>
        <item>网易新闻</item>
    </string-array>

    <string-array name="favorite_urls">
        <item>http://www.todayonhistory.com/</item>
        <item>https://github.com/trending</item>
        <item>http://3g.163.com/touch/news/</item>
    </string-array>

    <string name="item_swipe_dismissed">已删除</string>
    <string name="item_swipe_undo">撤销</string>


</resources>
