<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_tabs"
        android:orderInCategory="1"
        android:title="@string/title_tabs"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark"
        android:orderInCategory="2"
        android:title="@string/title_bookmark"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_goforward"
        android:orderInCategory="3"
        android:title="@string/action_goforward" />

    <group android:id="@+id/web_sites">
        <item
            android:id="@+id/action_refresh"
            android:orderInCategory="3"
            android:title="@string/action_refresh" />

        <item
            android:id="@+id/action_share"
            android:orderInCategory="4"
            android:title="@string/action_share" />

        <item
            android:id="@+id/action_favorite"
            android:orderInCategory="5"
            android:title="@string/action_collect" />

        <item
            android:id="@+id/action_copy_link"
            android:orderInCategory="6"
            android:title="@string/action_copy_link" />

        <item
            android:id="@+id/action_auto_fullscreen"
            android:checkable="true"
            android:orderInCategory="7"
            android:title="@string/action_auto_fullscreen" />

        <item
            android:id="@+id/action_desktop"
            android:checkable="true"
            android:orderInCategory="8"
            android:title="@string/action_desktop" />

        <item
            android:id="@+id/action_find"
            android:orderInCategory="9"
            android:title="@string/search_page" />


    </group>

    <item
        android:id="@+id/action_download"
        android:orderInCategory="10"
        android:title="@string/fast_enter_download" />

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="11"
        android:title="@string/fast_enter_setting" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="12"
        android:title="@string/action_exit" />

</menu>