<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_no_track"
        android:key="@string/no_track"
        android:title="@string/no_track" />
    <Preference
        android:icon="@drawable/ic_share"
        android:key="@string/app_share"
        android:title="@string/app_share" />
    <Preference
        android:icon="@drawable/ic_clear_cache"
        android:key="@string/clear_cache"
        android:title="@string/clear_cache" />
    <Preference
        android:icon="@drawable/ic_feedback"
        android:key="@string/feed_back"
        android:title="@string/feed_back" />
    <Preference
        android:icon="@drawable/ic_update"
        android:key="@string/manual_update"
        android:title="@string/manual_update" />
    <Preference
        android:icon="@drawable/ic_about"
        android:key="@string/app_about"
        android:title="@string/app_about" />
    <Preference
        android:icon="@drawable/ic_one_key"
        android:key="@string/one_key"
        android:title="@string/one_key" />

</PreferenceScreen>