<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.TabsActivity">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="1"
        android:title="@string/add_new_tab"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="2"
        android:title="@string/action_tab_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_close_all"
        android:orderInCategory="1"
        android:title="@string/close_all_tab" />

</menu>